# recruitment-task-backend-internship

./: .gitignore  README.md  pyproject.toml
profil_logger/: __init__.py  handlers.py  logger.py
tests/: test_handlers.py  test_log_entry.py  test_logger.py  test_reader.py
