[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "profil_logger"
version = "1.0.1"
description = "Refactored logging library"
requires-python = ">=3.12"
authors = [
  {name = "Michał Piekarski"},
  {name = "Patryk Kaźmierczak"},
  {name = "Artem Dychenko", email = "artemdychenko@gmail.com"},
]
readme = "README.md"

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.urls]
Repository = "https://github.com/ArtemDychenko/profil_logger"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 79
exclude = ["tests/resources"]

[tool.ruff.lint]
select = ["E", "F", "B", "I"]